istio-rules/my-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-user-ui
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
      - uri:
          prefix: /
    route:
    - destination:
        port:
          number: 80
        host: user-ui
