istio-rules/rute-userservice-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-user-service
spec:
  hosts:
  - user-service
  http:
  - route:
    - destination:
        host: user-service
        port:
          number: 80
    fault:
      abort:
        percent: 100
        httpStatus: 503
