istio-rules/rute-userservice-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-user-service
spec:
  hosts:
  - user-service
  http:
  - route:
    - destination:
        host: user-service
        port:
          number: 80
    fault:
      delay:
        fixedDelay: 7s
        percent: 100
